SSDM-13578 : 2PT : Database and V3 Implementation - system tests with two participants